# server/docs/swagger.yaml
@@ -667,7 +667,7 @@ definitions:
         description: 收入支出
         type: integer
       type:
-        description: 类型 1-发放收益 2-转账 3-购买卡牌 4-提现 -支付手续费
+        description: 类型 1-发放收益 2-盲盒 3-购买卡牌 4-手续费
         type: integer
       uid:
         description: 用户ID
@@ -1363,7 +1363,7 @@ definitions:
         description: 收入支出
         type: integer
       type:
-        description: 类型 1-发放收益 2-转账 3-购买卡牌 4-提现 -支付手续费
+        description: 类型 1-发放收益 2-盲盒 3-购买卡牌 4-手续费
         type: integer
       uid:
         description: 用户ID
@@ -1726,6 +1726,27 @@ definitions:
         description: 更新时间
         type: string
     type: object
+  web_tools.AvfUser:
+    properties:
+      created_at:
+        description: 创建时间
+        type: string
+      id:
+        description: 用户ID
+        type: integer
+      is_number:
+        description: 是否正式会员
+        type: boolean
+      pid:
+        description: 上级地址
+        type: string
+      username:
+        description: 用户名
+        type: string
+      wallet_address:
+        description: 钱包地址
+        type: string
+    type: object
   web_tools.CardMarketDetailResponse:
     properties:
       author:
@@ -1864,11 +1885,13 @@ definitions:
       list:
         description: 我的直推下级
         items:
-          $ref: '#/definitions/model.AvfUser'
+          $ref: '#/definitions/web_tools.AvfUser'
         type: array
       lower_count:
+        description: 我的下级
         type: integer
       team_count:
+        description: 我的团队
         type: integer
     type: object
   web_tools.OrderDetailResponse:
